站內連結樣式調整統一 #20210226

--- a/scss/jp-Rwd.scss
+++ b/scss/jp-Rwd.scss
@@ -818,3 +818,9 @@ header,
     display: none} 
 
 }
+
+@media(max-width:321px){
+    #gallery-view li{
+        width: 270px;
+        height: 270px}
+    }
