--- a/scss/tw-Style.scss
+++ b/scss/tw-Style.scss
@@ -28,12 +28,12 @@
 * @Language   Taiwan
 * @Author     tachimoma <hello@xuedesign.tw>
 * @copyright  2020 xuedesign studio
-* @version    v1.0- 202102
+* @version    v1.0- 202010
 *=====================================*/
 
 @import url("reset.css");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&display=swap");
 
 /*＝＝＝ 基本設定 ＝＝＝*/
 html{ 
@@ -43,7 +43,7 @@ body{
 	margin: 0;
 	padding:0;
     background: #fff;
-    font-family:"Noto Sans JP", "Microsoft JhengHei","PingFangTC-Regular", "Arial", "Helvetica", sans-serif;
+    font-family:"Noto Sans TC", "Microsoft JhengHei","PingFangTC-Regular", "Arial", "Helvetica", sans-serif;/*Noto Serif TC, "Noto Sans TC"*/
     font-size: 1rem; /* 1rem=10px */
     font-weight: 300;
     color:#333333}
@@ -185,7 +185,8 @@ h1 a{
 #top-links li:nth-child(2)::after,
 #top-links li:nth-child(3)::after,
 #top-links li:nth-child(4)::after,
-#top-links li:nth-child(5)::after{
+#top-links li:nth-child(5)::after,
+#top-links li:nth-child(6)::after{
     content: "|";
     padding: 0 8px;
     color: #fff}
@@ -220,7 +221,7 @@ nav{
 
 .mm-panel,
 .mm-navbar{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2rem;
     line-height: 3.5rem;
@@ -245,7 +246,7 @@ nav{
     --mm-color-text: #222;
     --mm-color-button: #4bb5ef} */
 
-/*＝＝＝ トップbanner ＝＝＝*/
+/*＝＝＝ 首頁banner ＝＝＝*/
 .banner-main{
     display: block;
     position: relative;
@@ -263,7 +264,7 @@ nav{
     padding: 10px 30px}
 .info-main h2,
 .info-main h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     color:rgb(230, 230, 230);}
 .info-main h2{ 
@@ -391,7 +392,7 @@ nav{
 .btn_send:visited,
 .btn-logout,
 .btn-logout:visited{
-    font-family:"Noto Sans JP", "Microsoft JhengHei","PingFangTC-Regular", "Arial", "Helvetica", sans-serif;
+    font-family:"Noto Sans TC", "Microsoft JhengHei","PingFangTC-Regular", "Arial", "Helvetica", sans-serif;
     font-size: 1.5rem;
     line-height: 2.5rem;
     letter-spacing: 1px;
@@ -416,7 +417,7 @@ nav{
 /*表單元件*/
 .myselect,
 .myinput{
-    font-family:"Noto Sans JP", "Microsoft JhengHei","PingFangTC-Regular", "Arial", "Helvetica", sans-serif;
+    font-family:"Noto Sans TC", "Microsoft JhengHei","PingFangTC-Regular", "Arial", "Helvetica", sans-serif;
     font-size: 1.5rem;
     color: #333;
     border: 1px solid #8f8e8e;
@@ -508,7 +509,7 @@ nav{
 #subnav-title{
     display: flex;
     font-size: 1.6rem;
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600}
 #backhome{ 
     width: 100%;/*18%*/
@@ -589,7 +590,7 @@ summary.nowin{
     display: flex;
     justify-content: space-between}    
 #page-title h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
 	font-weight: 700;
     font-size: 2.7rem;
     line-height: 3.7rem;
@@ -650,7 +651,7 @@ summary.nowin{
     text-align: justify}     
 
 /*
-========== 本研究所の紹介==========
+========== 本所簡介==========
 */
 #box-about a,
 #box-about a:visited,
@@ -721,7 +722,7 @@ summary.nowin{
 .advisory-info h5,
 .director-info h5,
 .doctors-info h5{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 700;
     line-height: 3rem;
     letter-spacing: 1px;    
@@ -830,10 +831,10 @@ summary.nowin{
     text-decoration: none}
 #box-about .advisory-info h5 a:hover{
     color: #b94545;
-    text-decoration: underline}      
+    text-decoration: underline}    
 
 /*
-========== 研究室とスタジオ==========
+========== 研究室與工作室==========
 */
 .other-links{
     margin-top: 30px}
@@ -843,7 +844,7 @@ summary.nowin{
     margin-right: 5px}
 
 /*
-========== 掲示板==========
+========== 佈告欄==========
 */
 #no-content{
     display: block;
@@ -851,7 +852,7 @@ summary.nowin{
     padding: 150px 0;
     text-align: center}
 #no-content h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 700;
     font-size: 2.5rem;
     letter-spacing: 2px;    
@@ -933,7 +934,7 @@ summary.nowin{
 .news-info h3 a,
 .positions-item h3 a,
 #bulletin-title h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 700;
     line-height: 3.3rem;
     font-size: 2.2rem;
@@ -1079,7 +1080,7 @@ summary.nowin{
     width: 100%;
     text-align: right;
     font-size:1.5rem; 
-    padding-bottom: 10px} 
+    padding-bottom: 10px}    
 
 /*#down-option{
     display: flex;
@@ -1103,7 +1104,7 @@ summary.nowin{
     float: right}
 
 /*
-========== 施設とデータベース案内==========
+========== 學術資源==========
 */
 #academic-main{
     display: block;
@@ -1148,10 +1149,10 @@ summary.nowin{
 #academic-main li a{ 
     color:#333}
 #academic-main li a:visited{ 
-    color:#a7a6a6}
+    color:#a7a6a6}    
 
 /*
-========== 研究スタッフ==========
+========== 人員名錄==========
 */
 #box-people{
     display: block;
@@ -1252,7 +1253,7 @@ summary.nowin{
 .staff-team{
     text-align: center}
 
-/*ディレクトル検索*/
+/*出版品搜尋*/
 .catlog-number{ 
     width: 8%;
     text-align: center;}
@@ -1328,7 +1329,7 @@ table.bt.bt--no-header tfoot td::before,
 table.bt.bt--no-header tbody td::before {
     display: none}
   
-@media only screen and (max-width:880px){
+@media only screen and (max-width: 880px){
 .two-axis td,
 .fellows-name,
 .fellows-note,
@@ -1405,7 +1406,7 @@ table.bt.bt--no-header tbody td::before {
 #fellows-info{
     width: 80%}
 #fellows-info h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 3rem;
     line-height: 4rem;
@@ -1496,7 +1497,8 @@ table.bt.bt--no-header tbody td::before {
     text-align: center;
     font-size: 1.5rem;
     color: #4d4d4d;
-    text-decoration: none}
+    text-decoration: none;
+    margin: 0 auto;}
 #fellows-research a.rmopen:hover,
 #fellows-research a.rmclose:hover,
 #book-brief a.rmopen:hover,
@@ -1522,7 +1524,7 @@ table.bt.bt--no-header tbody td::before {
     padding: 15px 0}
 
 /*
-========== 交流と演習 ==========
+========== 交流研習 ==========
 */   
 #box-outreach{
     display: block;
@@ -1539,7 +1541,7 @@ table.bt.bt--no-header tbody td::before {
     padding: 15px 0;
     border-bottom: 1px solid #C4C4C4}
 .international-item h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.3rem;
     line-height: 4rem;
@@ -1562,7 +1564,7 @@ table.bt.bt--no-header tbody td::before {
     text-decoration: none}
 
 #awards-list h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     line-height: 4rem;
     letter-spacing: 1px}
@@ -1577,7 +1579,7 @@ table.bt.bt--no-header tbody td::before {
 .awards-item summary,
 .periodical-item summary,
 .faq summary{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.3rem;
     line-height: 4rem;
@@ -1636,7 +1638,7 @@ table.bt.bt--no-header tbody td::before {
     /* font-weight: bold; */
     padding-right: 15px}
 
-/*史語ギャラリー*/
+/*史語藝廊*/
 #gallery-list{
     display: flex;
     flex-wrap: wrap;
@@ -1683,7 +1685,7 @@ table.bt.bt--no-header tbody td::before {
     box-sizing: border-box}
 
 /*
-========== 出版物 ==========
+========== 出版品 ==========
 */   
 .newbook-list{
     display: block;
@@ -1695,7 +1697,7 @@ table.bt.bt--no-header tbody td::before {
     width: 100%;
     margin-bottom: 20px}
 .newbook-title h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.3rem;
     line-height: 3.3rem;
@@ -1717,7 +1719,7 @@ table.bt.bt--no-header tbody td::before {
     margin-top: 30px}
 .asiamojor-note{
     padding-left: 58px; 
-    text-indent: -28px}
+    text-indent: -28px}    
 .book-thumbnail{
     display: flex;
     flex-wrap: wrap;
@@ -1789,7 +1791,7 @@ table.bt.bt--no-header tbody td::before {
     /*border-top: 1px solid #e1e1e1;
     border-bottom: 1px solid #e1e1e1;*/}
 #book-toolbar h4{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.3rem;
     letter-spacing: 1px;
@@ -1822,7 +1824,6 @@ table.bt.bt--no-header tbody td::before {
     cursor: no-drop;}
 #book-toolbar a.mybtn{
     letter-spacing: 1px}
-
 #bookbar-search{
     margin: 15px 8px 0 0;
     padding: 0 8px;
@@ -2056,7 +2057,7 @@ table.bt.bt--no-header tbody td::before {
     vertical-align: text-top;
     margin: -1px 5px 0 0}
 
-/*著書內容頁*/ 
+/*專書內容頁*/ 
 #book-summary{
     display: flex;
     flex-wrap: wrap;
@@ -2076,7 +2077,7 @@ table.bt.bt--no-header tbody td::before {
     width: 65%;
     text-align: left}
 #book-info h4{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.3rem;
     line-height: 3.3rem;
@@ -2104,7 +2105,7 @@ table.bt.bt--no-header tbody td::before {
     line-height: 2.8rem;
     text-align: justify}
 #book-brief{
-    margin-bottom: 50px}
+    margin-bottom: 70px}
 #book-brief p{
     margin-bottom: 15px}
 #book-brief-title{
@@ -2137,7 +2138,7 @@ table.bt.bt--no-header tbody td::before {
     padding: 3px;
     margin-right: 8px}
 
-#book-catalog{ margin-bottom: 20px;}
+#book-catalog{ margin-bottom: 20px;}    
 #book-catalog-title{
     display: flex;
     justify-content: space-between;
@@ -2145,13 +2146,15 @@ table.bt.bt--no-header tbody td::before {
     padding-bottom: 15px;
     margin-bottom: 15px;
     border-bottom: 1px solid #e1e1e1}
-#book-catalog h3{
-    font-family: "Noto Serif JP";
+#book-catalog h3,
+#book-brief h3{
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.3rem;
     line-height: 3.3rem;
     color:#A51C30}    
-#book-catalog h3::before{
+#book-catalog h3::before,
+#book-brief h3::before{
     display: inline-block;
     content: url(../images/pot-book.svg);
     width: 19px;
@@ -2167,7 +2170,7 @@ table.bt.bt--no-header tbody td::before {
     background: rgb(126, 123, 123);
     font-weight: normal;
     color: #fff;
-    margin: 15px 0 10px;}
+    margin: 15px 0 10px}
 .tabs-content h4{
     margin: 0 0 10px 22px}
 .tabs-content .book-catalog-main a{
@@ -2263,7 +2266,7 @@ table.bt.bt--no-header tbody td::before {
     vertical-align: top}
 #tree-list h3,
 #tree-list-02 h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2rem;
     line-height: 3.3rem;
@@ -2317,7 +2320,7 @@ table.bt.bt--no-header tbody td::before {
     padding: 15px 0;
     border-bottom: 1px dashed#8f7373}
 .box-search h4{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2rem;
     line-height: 3.3rem;
@@ -2402,7 +2405,7 @@ input.checkme:checked~div.showme{
     border-radius: 10px}
 #catlog-keyword h4,
 #catlog-title h4{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.3rem;
     line-height: 3.3rem;
@@ -2450,7 +2453,7 @@ input.checkme:checked~div.showme{
     background-color:#e9e9e9}
 
 /*
-========== トップ ==========
+========== 首頁 ==========
 */
 .box-index{
     display: flex;
@@ -2464,14 +2467,14 @@ input.checkme:checked~div.showme{
     display: block;
     width: 32%}
 
-/*トップ研究活動區*/ 
+/*首頁學術活動區*/ 
 .box-indextitle{
     display: flex;
     width: 100%;
     justify-content: space-between;
     flex-wrap: wrap}  
 .box-indextitle h3{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.7rem;
     line-height: 2rem;
@@ -2573,7 +2576,7 @@ input.checkme:checked~div.showme{
     margin: 0 auto 10px auto;
     padding: 5px;
     overflow:hidden;
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 1.9rem;
     line-height: 3rem;
@@ -2626,7 +2629,7 @@ input.checkme:checked~div.showme{
 .btn_reg a:hover{
     background: #941a1a}
 
-/*トップお知らせ*/
+/*首頁最新消息*/
 #hotnews{
     display: block;
     width: 100%;
@@ -2751,7 +2754,7 @@ input.checkme:checked~div.showme{
     text-overflow:ellipsis;
     -webkit-line-clamp:1; 
     -webkit-box-orient:vertical;
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 1.8rem;
     line-height: 5.4rem;
@@ -2781,7 +2784,7 @@ input.checkme:checked~div.showme{
     padding: 5px 0}
 
 .maptitle{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 1.8rem;
     line-height: 5.4rem;
@@ -2908,7 +2911,7 @@ input.checkme:checked~div.showme{
     -webkit-line-clamp:1; 
     -webkit-box-orient:vertical;}
 #result-list h4 a{
-    font-family: "Noto Serif JP";
+    font-family: "Noto Serif TC";
     font-weight: 600;
     font-size: 2.1rem;
     line-height: 3rem;
